crates/gpui-form-macros/tests/ui/fail/removed_component_option.rs
use gpui_form_macros::FormStore;

#[derive(FormStore)]
struct Example {
    #[form(component = InputState)]
    value: String,
}

fn main() {}
